--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site-cookbooks/bareos"]
 	path = site-cookbooks/bareos
 	url = https://github.com/sitle/chef-bareos.git
+[submodule "site-cookbooks/rsync"]
+	path = site-cookbooks/rsync
+	url = https://github.com/sitle/chef-rsync.git
